<resources>
    <string name="app_name">GuoJiangZhiBo</string>


    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_onefragment_one">关注</string>
    <string name="text_onefragment_two">热门</string>
    <string name="text_onefragment_three">最新</string>
    <string name="circle">饭圈</string>
    <string name="selection">精选</string>
    <string name="intrestString">已关注</string>
    <string name="nointrestString">未关注</string>
    <string name="popularity">人气</string>
    <string name="invitation">帖子</string>
    <string name="fans">粉丝</string>
    <string name="text_searchstar">明星榜</string>
    <string name="text_searchpopular">人气榜</string>
    <string name="text_searchrich">财富榜</string>
    <string name="text_personattention">关注</string>
    <string name="text_persontalk">私信</string>
    <string name="text_persondefriend">拉黑</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="network_dialog_message">正在加载&#8230;</string>

</resources>
