<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff0"
    tools:context="com.rose.guojiangzhibo.activity.PersonalActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout_peronal"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_user_bg"
            app:collapsedTitleGravity="center"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_user_bg"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.1">

                <ImageView
                    android:id="@+id/image_perosonback"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:onClick="onclick"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:src="@mipmap/ic_live_bottom_left_nor" />

                <ImageView
                    android:id="@+id/image_personenter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@mipmap/abc_ic_go_search_api_mtrl_alpha" />

                <TextView
                    android:id="@+id/text_personenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toLeftOf="@+id/image_personenter"
                    android:paddingRight="40dp"
                    android:paddingTop="17dp"
                    android:text="进入房间"
                    android:textColor="#ffffffff" />

                <ImageView
                    android:id="@+id/image_personbigheader"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onclick"
                    android:src="@mipmap/bg_user_default" />

                <TextView
                    android:id="@+id/text_personbigname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_personbigheader"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="25dp"
                    android:text="名字"
                    android:textColor="#ffffffff"
                    android:textSize="20dp" />

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_trendnumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="0" />

                <TextView
                    android:id="@+id/text_fannumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="0" />

                <TextView
                    android:id="@+id/text_focusnumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_persontrend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center|top"
                    android:text="动态" />

                <TextView
                    android:id="@+id/text_personfan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center|top"
                    android:text="粉丝" />

                <TextView
                    android:id="@+id/text_personfocus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center|top"
                    android:text="关注" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/framelayout_personal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="#ffffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_personattention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="30dp"
                android:src="@mipmap/ic_person_focus" />

            <TextView
                android:id="@+id/text_personattention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="10dp"
                android:text="@string/text_personattention" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_privatetalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="30dp"
                android:src="@mipmap/icon_person_conversation" />

            <TextView
                android:id="@+id/text_privatetalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="10dp"
                android:text="@string/text_persontalk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_defriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="30dp"
                android:src="@mipmap/icon_person_black" />

            <TextView
                android:id="@+id/text_defriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                android:paddingLeft="10dp"
                android:text="@string/text_persondefriend" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
